Fixed length of text on file uploads being too big (fixes #1)

--- a/src/views/sass/comments.scss
+++ b/src/views/sass/comments.scss
@@ -66,7 +66,11 @@
 			animation: fadeIn .3s;
 		}
 		div {
+			overflow: hidden;
 			text-align: center;
+			text-overflow: ellipsis;
+			margin: 0 auto;
+			width: 250px;
 		}
 	}
 	
